[gd_scene load_steps=2 format=3 uid="uid://c4yv4w6y8h3uw"]

[ext_resource type="Script" path="res://scripts/systems/UIManager.gd" id="1_m4n8x"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1_m4n8x")

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 0
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 320.0
offset_bottom = -90.0
value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -15.0
offset_right = 50.0
offset_bottom = 15.0
text = "100 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MemoryFragments" type="Panel" parent="."]
layout_mode = 0
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -120.0
offset_right = -20.0
offset_bottom = -90.0

[node name="Label" type="Label" parent="MemoryFragments"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -15.0
offset_right = 90.0
offset_bottom = 15.0
text = "Memory Fragments: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelInfo" type="Panel" parent="."]
layout_mode = 0
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0

[node name="Label" type="Label" parent="LevelInfo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -15.0
offset_right = 140.0
offset_bottom = 15.0
text = "Ashen Courtyard - Level 1"
horizontal_alignment = 1
vertical_alignment = 1